posts-microservice/infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: dpac9525/query
        # imagePullPolicy: Always
---
# Cluster IP Config
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-service
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
  - name: query
    protocol: TCP
    port: 4002
    targetPort: 4002
