posts-microservice/infra/k8s/query-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-nodeport-srv
spec:
  type: NodePort
  selector:
    app: query
  ports:
  - name: query
    protocol: TCP
    port: 4002
    targetPort: 4002
